tests/fixtures/invalid/int_rshift_set.py
# Cannot right shift Int and Set[int]
x: int = 1 >> {1, 2, 3}
